--- a/about.html
+++ b/about.html
@@ -64,6 +64,8 @@
 		function black(){
 			if(document.getElementById('check').checked)
 			{
+				document.getElementById('nav').style.background = '#fff';
+				document.getElementById('bars').style.color = "#000";
 				setTimeout(function() {document.getElementById('notnav').classList.toggle('nodisplay');}, 500);
 				document.getElementById('bars').style.transform = 'rotate(-90deg)';
 				setTimeout(function() {document.getElementById('bars').classList.add('fa-times');}, 300);
@@ -71,6 +73,7 @@
 			}
 			else
 			{
+				navchange();
 				document.getElementById('notnav').classList.toggle('nodisplay');
 				document.getElementById('bars').style.transform = 'rotate(-180deg)';
 				setTimeout(function() {document.getElementById('bars').classList.add('fa-bars');}, 300);
@@ -102,6 +105,60 @@
 				document.getElementById('bait').style.marginRight = '0px';
 			}
 		}
+
+		function navchange() {
+			if(window.scrollY>2)
+			{
+				document.getElementById('nav').style.background = 'rgba(255,255,255,0.97)';
+				document.getElementById('nav').style.borderBottom = '1px solid rgba(0,0,0,0.3)';
+				let items = document.getElementsByClassName('navbar-item');
+				let i=0;
+				for(i=0;i<items.length;i++)
+				{
+					items[i].style.color = '#393185';
+				}
+				document.getElementById('bars').style.color = "#000";
+				document.getElementsByClassName('banner')[0].style.paddingTop = '60px';
+				document.getElementById('nav').style.height = '60px';
+				$("nav ul li").css("line-height","60px");
+				$("nav a img").css("height","50px");
+				$("nav a img").css("top","5px");
+			}
+			else
+			{
+				document.getElementById('nav').style.background = 'transparent';
+				document.getElementById('nav').style.borderBottom = 'none';
+				if(screen.width>740)
+				{
+					let items = document.getElementsByClassName('navbar-item');
+					let i=0;
+					for(i=0;i<items.length;i++)
+					{
+						items[i].style.color = 'rgba(255,255,255,1)';
+					}
+					document.getElementsByClassName('banner')[0].style.paddingTop = '70px';
+					document.getElementById('nav').style.height = '70px';
+					$("nav ul li").css("line-height","70px");
+					$("nav a img").css("height","55px");
+					$("nav a img").css("top","10px");
+				}
+				else
+				{
+					let items = document.getElementsByClassName('navbar-item');
+					let i=0;
+					for(i=0;i<items.length;i++)
+					{
+						items[i].style.color = '#393185';
+					}
+					document.getElementsByClassName('banner')[0].style.paddingTop = '60px';
+					document.getElementById('nav').style.height = '60px';
+					$("nav ul li").css("line-height","60px");
+					$("nav a img").css("height","50px");
+					$("nav a img").css("top","5px");
+				}
+				document.getElementById('bars').style.color = "#fff";
+			}
+		}
 	</script>
 
 </head>
@@ -109,19 +166,23 @@
 
 	<div class="banner">
 
-		<nav>
+		<nav id="nav">
 			<input type="checkbox" id="check" onchange="black();">
 			<label for="check">
 				<i class="fas fa-bars" id="bars"></i>
 			</label>
-			<a href="#"><img src="images/logo.png" alt="Prerana Enterprises"></a>
+			<a href="index.html"><img src="images/logo.png" alt="Prerana Enterprises"></a>
 			<ul>
-				<li><a href="#"><i class="fas fa-home"></i> Home</a></li>
-				<li class="active" id="active"><a href="javascript: void(0)"><i class="fas fa-file-contract"></i> About Us</a></li>
-				<li><a href="#"><i class="fas fa-box-open"></i> Our Products</a></li>
-				<li><a href="#"><i class="far fa-address-card"></i> Contact Us</a></li>
+				<li><a class="navbar-item" href="index.html"><i class="fas fa-home"></i> Home</a></li>
+				<li class="active" id="active"><a class="navbar-item" href="javascript: void(0)"><i class="fas fa-file-contract"></i> About Us</a></li>
+				<li><a class="navbar-item" href="products.html"><i class="fas fa-box-open"></i> Our Products</a></li>
+				<li><a class="navbar-item" href="contact.html"><i class="far fa-address-card"></i> Contact Us</a></li>
 			</ul>
 		</nav>
+
+		<div class="container">
+			<h2 class=" subname pt-2 pb-2 text-white">About Us</h2>
+		</div>
 
 	</div>
 
@@ -137,7 +198,6 @@
 
 
 
-<div class="pt-5"><h2 class="text-center subname pt-3 pb-md-4 pb-4"><i class="far fa-comment icon-color"></i> Contact Us</h2></div>
 
 
 
@@ -205,7 +265,45 @@
 
 <script type="text/javascript">
 	
+	if(window.scrollY>2)
+	{
+		document.getElementById('nav').style.background = 'rgba(255,255,255,0.97)';
+		document.getElementById('nav').style.borderBottom = '1px solid rgba(0,0,0,0.3)';
+		let items = document.getElementsByClassName('navbar-item');
+		let i=0;
+		for(i=0;i<items.length;i++)
+		{
+			items[i].style.color = '#393185';
+		}
+		document.getElementById('bars').style.color = "#000";
+		document.getElementsByClassName('banner')[0].style.paddingTop = '60px';
+		document.getElementById('nav').style.height = '60px';
+		$("nav ul li").css("line-height","60px");
+		$("nav a img").css("height","50px");
+		$("nav a img").css("top","5px");
+	}
+	else if(screen.width<740)
+	{
+		document.getElementsByClassName('banner')[0].style.paddingTop = '60px';
+		document.getElementById('nav').style.height = '60px';
+		$("nav ul li").css("line-height","60px");
+		$("nav a img").css("height","50px");
+		$("nav a img").css("top","5px");
+	}
+	else
+	{
+		document.getElementsByClassName('banner')[0].style.paddingTop = '70px';
+		document.getElementById('nav').style.height = '70px';
+		$("nav a img").css("top","10px");
+		$("nav a img").css("height","55px");
+	}
 	
+	$("nav ul li").hover(function() {
+		if(screen.width>740 && window.scrollY<2)
+		{
+			$("nav ul li a").css("color","#fff");
+		}
+	});
 
 
 
@@ -223,6 +321,10 @@
 	}
 
 	window.onscroll = function() {
+
+		navchange();
+
+
 		if(window.scrollY>50)
 		{
 			if(document.getElementById('click').style.marginRight != '100px')
@@ -266,6 +368,7 @@
 
 	window.onload = function() {
 		page_height();
+		setTimeout(function() {page_height();}, 2200);
 	};
 
 		
