--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Prerana Enterprises | About Us</title>
+	<title>Prerana Enterprises | Contact Us</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
@@ -11,7 +11,7 @@
 
 
 	<!--whatsapp and fb-->
-	<meta property="og:title" content="Prerana Enterprises | About Us" />
+	<meta property="og:title" content="Prerana Enterprises | Contact Us" />
 	<meta property="og:description" content="" />
 	<meta property="og:url" content="" />
 	<meta property="og:type" content="website" />
@@ -23,7 +23,7 @@
 
 	<!--twitter-->
 	<meta property="twitter:card" content="summary_large_image" />
-	<meta property="twitter:title" content="Prerana Enterprises | About Us" />
+	<meta property="twitter:title" content="Prerana Enterprises | Contact Us" />
 	<meta property="twitter:description" content="" />
 	<meta property="twitter:image" content="" />
 
@@ -64,6 +64,8 @@
 		function black(){
 			if(document.getElementById('check').checked)
 			{
+				document.getElementById('nav').style.background = '#fff';
+				document.getElementById('bars').style.color = "#000";
 				setTimeout(function() {document.getElementById('notnav').classList.toggle('nodisplay');}, 500);
 				document.getElementById('bars').style.transform = 'rotate(-90deg)';
 				setTimeout(function() {document.getElementById('bars').classList.add('fa-times');}, 300);
@@ -71,6 +73,7 @@
 			}
 			else
 			{
+				navchange();
 				document.getElementById('notnav').classList.toggle('nodisplay');
 				document.getElementById('bars').style.transform = 'rotate(-180deg)';
 				setTimeout(function() {document.getElementById('bars').classList.add('fa-bars');}, 300);
@@ -90,16 +93,57 @@
 			}, 30);
 		}
 
-		function slidein() {
-			if(document.getElementById('bait').style.marginRight == '0px')
+		function navchange() {
+			if(window.scrollY>2)
 			{
-				document.getElementById('click').style.marginRight = '100px';
-				document.getElementById('bait').style.marginRight = '100px';
+				document.getElementById('nav').style.background = 'rgba(255,255,255,0.97)';
+				document.getElementById('nav').style.borderBottom = '1px solid rgba(0,0,0,0.3)';
+				let items = document.getElementsByClassName('navbar-item');
+				let i=0;
+				for(i=0;i<items.length;i++)
+				{
+					items[i].style.color = '#393185';
+				}
+				document.getElementById('bars').style.color = "#000";
+				document.getElementsByClassName('banner')[0].style.paddingTop = '60px';
+				document.getElementById('nav').style.height = '60px';
+				$("nav ul li").css("line-height","60px");
+				$("nav a img").css("height","50px");
+				$("nav a img").css("top","5px");
 			}
 			else
 			{
-				document.getElementById('click').style.marginRight = '0px';
-				document.getElementById('bait').style.marginRight = '0px';
+				document.getElementById('nav').style.background = 'transparent';
+				document.getElementById('nav').style.borderBottom = 'none';
+				if(screen.width>740)
+				{
+					let items = document.getElementsByClassName('navbar-item');
+					let i=0;
+					for(i=0;i<items.length;i++)
+					{
+						items[i].style.color = 'rgba(255,255,255,1)';
+					}
+					document.getElementsByClassName('banner')[0].style.paddingTop = '70px';
+					document.getElementById('nav').style.height = '70px';
+					$("nav ul li").css("line-height","70px");
+					$("nav a img").css("height","55px");
+					$("nav a img").css("top","10px");
+				}
+				else
+				{
+					let items = document.getElementsByClassName('navbar-item');
+					let i=0;
+					for(i=0;i<items.length;i++)
+					{
+						items[i].style.color = '#393185';
+					}
+					document.getElementsByClassName('banner')[0].style.paddingTop = '60px';
+					document.getElementById('nav').style.height = '60px';
+					$("nav ul li").css("line-height","60px");
+					$("nav a img").css("height","50px");
+					$("nav a img").css("top","5px");
+				}
+				document.getElementById('bars').style.color = "#fff";
 			}
 		}
 	</script>
@@ -107,21 +151,25 @@
 </head>
 <body>
 
-	<div class="banner">
+	<div class="banner mb-3">
 
-		<nav>
+		<nav id="nav">
 			<input type="checkbox" id="check" onchange="black();">
 			<label for="check">
 				<i class="fas fa-bars" id="bars"></i>
 			</label>
-			<a href="#"><img src="images/logo.png" alt="Prerana Enterprises"></a>
+			<a href="index.html"><img src="images/logo.png" alt="Prerana Enterprises"></a>
 			<ul>
-				<li><a href="#"><i class="fas fa-home"></i> Home</a></li>
-				<li><a href="#"><i class="fas fa-file-contract"></i> About Us</a></li>
-				<li><a href="#"><i class="fas fa-box-open"></i> Our Products</a></li>
-				<li class="active" id="active"><a href="javascript: void(0)"><i class="far fa-address-card"></i> Contact Us</a></li>
+				<li><a class="navbar-item" href="index.html"><i class="fas fa-home"></i> Home</a></li>
+				<li><a class="navbar-item" href="about.html"><i class="fas fa-file-contract"></i> About Us</a></li>
+				<li><a class="navbar-item" href="products.html"><i class="fas fa-box-open"></i> Our Products</a></li>
+				<li class="active" id="active"><a class="navbar-item" href="javascript: void(0)"><i class="far fa-address-card"></i> Contact Us</a></li>
 			</ul>
 		</nav>
+
+		<div class="container">
+			<h2 class=" subname pt-2 pb-2 text-white">Contact Us</h2>
+		</div>
 
 	</div>
 
@@ -131,15 +179,7 @@
 
 
 
-	<div class="click text-center" onclick="slidein();" id="click">Contact Us</div>
-	<div class="bait" id="bait">Lorem<br>lorem<br>lorem<br>lorem</div>
-
-
-
-<div class="pt-5"><h2 class="text-center subname pt-3 pb-md-4 pb-4"><i class="far fa-comment icon-color"></i> Contact Us</h2></div>
-
-
-<div class="container contact-set">
+<div class="container contact-set pt-4">
 	<div class="row">
 		<div class="col-lg-6 col-sm-12">
 			<form class="ev_form" autocomplete="off">
@@ -148,17 +188,17 @@
                         <span class="form-required">* is for required.</span>
                     </div>
                     <label for="name">Name<span class="form-required"> *</span></label>
-                    <input type="text" id="name" class="form-control" placeholder="Enter Your Name" autocomplete="off" required></br>
+                    <input type="text" id="name" class="form-control mt-1" placeholder="Enter Your Name" autocomplete="off" required></br>
                     <label for="number">Mobile Number<span class="form-required"> *</span></label>
-                    <input type="tel" id="number" class="form-control" placeholder="Enter Your Mobile number" autocomplete="off" required>
+                    <input type="tel" id="number" class="form-control mt-1" placeholder="Enter Your Mobile number" autocomplete="off" required>
                 	<small class="form-text text-muted"> We'll never share your mobile number with anyone else.</small>
                 	</br>
                     <label for="email">Email Address</label>
-                    <input type="email" id="email" class="form-control" placeholder="Enter Your Email" autocomplete="off">
+                    <input type="email" id="email" class="form-control mt-1" placeholder="Enter Your Email" autocomplete="off">
                     <small class="form-text text-muted"> We'll never share your email with anyone else.</small>
                     </br>
                     <label for="message">Message</label><br>
-                    <textarea id="message" class="form-control txt-area" placeholder="Type your message here" autocomplete="off"></textarea>
+                    <textarea id="message" class="form-control mt-1 txt-area" placeholder="Type your message here" autocomplete="off"></textarea>
                     <br>
 
 
@@ -170,18 +210,25 @@
 		</div>
 		<div class="col-lg-6 col-sm-12">
 			<div class="contact-about">
-				<div class="contact-head"><i class="fas fa-mobile-alt contact-fa"></i> Mobile Number:</div>
-				<div class="contact-info">
-					<a href="tel:+" class="contact-call">+91 9999999999</a><br>
-					<a href="tel:+" class="contact-call">+91 9999999999</a><br>
-					<a href="https://wa.me/" class="btn btn-success btn-sm whatsapp-button">Click to Chat on WhatsApp</a><br>
-					<a href="#" class="btn btn-primary btn-sm whatsapp-button">Click to Call Us</a>
+				<div class="row">
+					<div class="col-12 col-lg-6 pt-0 pt-lg-2">
+						<div class="contact-head"><i class="fas fa-mobile-alt contact-fa"></i> Mobile Number:</div>
+						<div class="contact-info">
+							<a href="tel:+" class="contact-call">+91 9999999999</a><br>
+							<a href="tel:+" class="contact-call">+91 9999999999</a><br>
+							<a href="https://wa.me/" class="btn btn-success btn-sm whatsapp-button mt-lg-3">Click to Chat on WhatsApp</a><br>
+							<a href="#" class="btn btn-primary btn-sm whatsapp-button mt-lg-3">Click to Call Us</a>
+						</div>
+					</div>
+					<div class="col-12 col-lg-6 pt-0 pt-lg-2">
+						<div class="contact-head"><i class="far fa-envelope contact-fa"></i> Email Address:</div>
+						<div class="contact-info">email@gmail.com</div>
+						<div class="contact-head"><i class="fas fa-store-alt contact-fa"></i> Address:</div>
+						<div class="contact-info">Address... <br>Address...</div>
+					</div>
 				</div>
-				<div class="contact-head"><i class="far fa-envelope contact-fa"></i> Email Address:</div>
-				<div class="contact-info">email@gmail.com</div>
-				<div class="contact-head"><i class="fas fa-store-alt contact-fa"></i> Address:</div>
-				<div class="contact-info">Address... <br>Address...</div>
-				<div class="contact-info-special"><i class="fas fa-home contact-fa"></i> <b>If you live around our location...</b><br>You can also visit us at the above mentioned address to place your orders and have a look at our factory environment !<br>We would love meet you and discuss the orders across table.</div>
+				
+				<div class="contact-info-special pt-lg-5"><i class="fas fa-home contact-fa"></i> <b>If you live around our location...</b><br>You can also visit us at the above mentioned address to place your orders and have a look at our factory environment.<br>We would love meet you and discuss the orders across table.</div>
 			</div>
 		</div>
 	</div>
@@ -193,6 +240,10 @@
 
 
 <div class="container pb-4"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d122139.63575622237!2d73.17021154688368!3d17.76026599562189!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be9c229663fea65%3A0x2cba3d6781d9923d!2sPrerana%20Enterprises!5e0!3m2!1sen!2sin!4v1594105915819!5m2!1sen!2sin" height="500" frameborder="0" style="border:5px solid #bbb; border-radius: 10px; width: 100%;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+
+
+
+
 
 
 
@@ -224,7 +275,7 @@
 				<div class="col-lg-4 col-sm-6 col-12 pb-sm-0 pb-4">
 					<div class="ml-sm-3 ml-0 mb-3 footer-head text-sm-left text-center"><b>Reach Out To Us</b></div>
 					<div class="row footer-data">
-						<div class="col-sm-2 col-3 text-right"><i class="fas fa-store-alt"></i></div>
+						<div class="col-sm-2 col-3 text-right"><i class="fas fa-store-alt"></i></i></div>
 						<div class="col-sm-10 col-9 mb-3">Address.....<br>Address..... <br>Address.....<br>Address..... </div>
 					</div>
 					<div class="text-center text-lg-left pb-2">
@@ -253,7 +304,45 @@
 
 <script type="text/javascript">
 	
+	if(window.scrollY>2)
+	{
+		document.getElementById('nav').style.background = 'rgba(255,255,255,0.97)';
+		document.getElementById('nav').style.borderBottom = '1px solid rgba(0,0,0,0.3)';
+		let items = document.getElementsByClassName('navbar-item');
+		let i=0;
+		for(i=0;i<items.length;i++)
+		{
+			items[i].style.color = '#393185';
+		}
+		document.getElementById('bars').style.color = "#000";
+		document.getElementsByClassName('banner')[0].style.paddingTop = '60px';
+		document.getElementById('nav').style.height = '60px';
+		$("nav ul li").css("line-height","60px");
+		$("nav a img").css("height","50px");
+		$("nav a img").css("top","5px");
+	}
+	else if(screen.width<740)
+	{
+		document.getElementsByClassName('banner')[0].style.paddingTop = '60px';
+		document.getElementById('nav').style.height = '60px';
+		$("nav ul li").css("line-height","60px");
+		$("nav a img").css("height","50px");
+		$("nav a img").css("top","5px");
+	}
+	else
+	{
+		document.getElementsByClassName('banner')[0].style.paddingTop = '70px';
+		document.getElementById('nav').style.height = '70px';
+		$("nav a img").css("top","10px");
+		$("nav a img").css("height","55px");
+	}
 	
+	$("nav ul li").hover(function() {
+		if(screen.width>740 && window.scrollY<2)
+		{
+			$("nav ul li a").css("color","#fff");
+		}
+	});
 
 
 
@@ -271,19 +360,10 @@
 	}
 
 	window.onscroll = function() {
-		if(window.scrollY>50)
-		{
-			if(document.getElementById('click').style.marginRight != '100px')
-			{
-				document.getElementById('click').style.marginRight = '0px';
-				document.getElementById('bait').style.marginRight = '0px';
-			}
-		}
-		else
-		{
-			document.getElementById('click').style.marginRight = '-50px';
-			document.getElementById('bait').style.marginRight = '-50px';
-		}
+
+		navchange();
+
+
 	}
 
 	
@@ -314,6 +394,7 @@
 
 	window.onload = function() {
 		page_height();
+		setTimeout(function() {page_height();}, 2200);
 	};
 
 		
