--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 			if(window.scrollY>50)
 			{
 				document.getElementById('nav').style.background = 'rgba(255,255,255,0.97)';
+				document.getElementById('nav').style.borderBottom = '1px solid rgba(0,0,0,0.3)';
 				let items = document.getElementsByClassName('navbar-item');
 				let i=0;
 				for(i=0;i<items.length;i++)
@@ -76,6 +77,7 @@
 			else
 			{
 				document.getElementById('nav').style.background = 'transparent';
+				document.getElementById('nav').style.borderBottom = 'none';
 				if(screen.height<830)
 				{
 					document.getElementsByClassName('banner')[0].style.minHeight = (screen.height)+'px';
@@ -248,9 +250,9 @@
 			<a href="#"><img src="images/logo.png" alt="Prerana Enterprises"></a>
 			<ul>
 				<li class="active" id="active"><a class="navbar-item" href="javascript: void(0)"><i class="fas fa-home"></i> Home</a></li>
-				<li><a class="navbar-item" href="#"><i class="fas fa-file-contract"></i> About Us</a></li>
-				<li><a class="navbar-item" href="#"><i class="fas fa-box-open"></i> Our Products</a></li>
-				<li><a class="navbar-item" href="#"><i class="far fa-address-card"></i> Contact Us</a></li>
+				<li><a class="navbar-item" href="about.html"><i class="fas fa-file-contract"></i> About Us</a></li>
+				<li><a class="navbar-item" href="products.html"><i class="fas fa-box-open"></i> Our Products</a></li>
+				<li><a class="navbar-item" href="contact.html"><i class="far fa-address-card"></i> Contact Us</a></li>
 			</ul>
 		</nav>
 		<div class="container">
@@ -403,7 +405,7 @@
 </div>
 
 <div class="aboutus-bg">
-	<h2 class="text-center subname pt-3 pb-md-5 pb-4 boom-opacity">More About Us</h2>
+	<h2 class="text-center subname pt-3 pb-md-5 pb-4 boom-opacity proud-client">More About Us</h2>
 
 	<div class="row home-product text-center pb-5">
 		<div class="col-md-5 col-12">
@@ -486,6 +488,7 @@
 	if(window.scrollY>50)
 	{
 		document.getElementById('nav').style.background = 'rgba(255,255,255,0.97)';
+		document.getElementById('nav').style.borderBottom = '1px solid rgba(0,0,0,0.3)';
 		let items = document.getElementsByClassName('navbar-item');
 		let i=0;
 		for(i=0;i<items.length;i++)
@@ -608,6 +611,7 @@
 
 	window.onload = function() {
 		page_height();
+		setTimeout(function() {page_height();}, 2200);
 	};
 
 		
